// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.YoutubeVideo autoPlay 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo autoPlay 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo autoPlay 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo autoPlay 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo className 1`] = `
<Span
  className="uu5-bricks-youtube-video my-classname"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video my-classname uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo controlled 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo default props 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableControls 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableFullscreen 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableInfo 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disableRelatedVideos 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <iframe
    className="uu5-bricks-youtube-video uu5-common-disabled uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo disabled 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <iframe
    className="uu5-bricks-youtube-video uu5-common-disabled uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo docKit examples UU5.Bricks.YoutubeVideo should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <YoutubeVideo
    autoplay={true}
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID02"
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    s={true}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disableControls={true}
    disabled={false}
    hidden={false}
    id="uuID03"
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID04"
    key="uuID04"
    loop={true}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disableInfo={true}
    disabled={false}
    hidden={false}
    id="uuID05"
    key="uuID05"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disableRelatedVideos={true}
    disabled={false}
    hidden={false}
    id="uuID06"
    key="uuID06"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disableFullscreen={true}
    disabled={false}
    hidden={false}
    id="uuID07"
    key="uuID07"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
  <YoutubeVideo
    className={null}
    controlled={true}
    disabled={false}
    hidden={false}
    id="uuID08"
    key="uuID08"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="s"
    src="https://www.youtube.com/watch?v=1rDVz_Fb6HQ"
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.YoutubeVideo hidden 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-common-hidden uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo hidden 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-common-hidden uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo id 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="myId"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo loop 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo mainAttrs 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo name 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="spa"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="container"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 5`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="page"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 6`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 7`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 8`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 9`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 10`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 11`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 12`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 13`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 14`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 15`] = `""`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 16`] = `""`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 17`] = `""`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 18`] = `""`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 19`] = `""`;

exports[`UU5.Bricks.YoutubeVideo nestingLevel 20`] = `""`;

exports[`UU5.Bricks.YoutubeVideo noIndex 1`] = `
<Span
  className="uu5-bricks-youtube-video uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-noindex uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo noIndex 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo noIndex 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo noIndex 4`] = `
<Span
  className="uu5-bricks-youtube-video uu5-noindex"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-noindex uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo pureRender 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-common-selected uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo selected 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-common-selected uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-l"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 5`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-l"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 6`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-xl"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 7`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-xl"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo size 8`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-l"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo src 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    src="https://youtube.com/embed/xfG15i_uQvc?"
    style={Object {}}
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style 2`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style 3`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo style 4`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Span>
`;

exports[`UU5.Bricks.YoutubeVideo tooltip 1`] = `
<Span
  className="uu5-bricks-youtube-video"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel={null}
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
>
  <iframe
    className="uu5-bricks-youtube-video uu5-bricks-youtube-video-m"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  />
</Span>
`;
